# iico-core

./: .gitignore  README.md  pyproject.toml
benchmarks/results/: comparison.md
benchmarks/results/document+convolution__embeddings/: metrics.csv  report.md  run_summary.json
benchmarks/results/document+convolution__splay/: metrics.csv  report.md  run_summary.json
benchmarks/results/document__embeddings/: metrics.csv  report.md  run_summary.json
benchmarks/results/document__splay/: metrics.csv  report.md  run_summary.json
benchmarks/results/naive_200+convolution__embeddings/: metrics.csv  report.md  run_summary.json
benchmarks/results/naive_200+convolution__splay/: report.md  (+2 more)
iico_core/: __init__.py  harness.py  llm_client.py  types.py
iico_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
iico_core/bridge/: __init__.py  shell.py
iico_core/db/: __init__.py  note_db.py  watcher.py
iico_core/index/: __init__.py  embedding.py  splay_tree.py
iico_core/memory/: __init__.py  active.py  chunk_store.py  chunker.py  passive.py  skills.py
iico_core/rag_bench/: __init__.py  ragas_bridge.py  runner.py  types.py
iico_core/reasoning/: __init__.py  react_loop.py  sdd_manager.py  task_manager.py
tests/: test_benchmark_runner.py  test_chunker_semantic.py  test_chunker_structural.py  test_chunking_strategies.py  test_embedding_persistence.py  test_note_db.py  test_rag_strategies.py  test_react_loop.py  test_shell_bridge.py  test_skill_registry.py  test_splay_tree.py  test_task_manager.py  test_tool_registry.py  test_watcher.py
venv3/: pyvenv.cfg
(+59 files in other folders)
