[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iico-core"
version = "0.1.0"
description = "Harness de gestión de contexto para agentes LLM en baja VRAM"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
embeddings = [
    "onnxruntime>=1.18",
    "numpy>=1.26",
    "tokenizers>=0.19",
]
metrics = [
    "pynvml>=11.5",
    "psutil>=5.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["iico_core*"]
