[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iico-core"
version = "0.1.0"
description = "Harness de gestión de contexto para agentes LLM en baja VRAM"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "pyyaml>=6.0.2",
    "python-frontmatter>=1.1.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
embeddings = [
    "onnxruntime>=1.20.0",
    "numpy>=2.0.0",
    "tokenizers>=0.21.0",
    "huggingface-hub>=0.23.0",
]
metrics = [
    "pynvml>=12.0.0",
    "psutil>=6.1.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "python-dotenv>=1.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["iico_core*"]
